ER9x changelog
Please insert a short description of a change by inserting it below this header and 
above the previous change.

Format is as follows:
******************************************
CHANGELOG: 1-11-2011
description here
====================================================================================
******************************************
CHANGELOG: 02-01-2012  RFT
complere rework of audio system.
less firmware space
less cpu usage
please all test before active use.


******************************************
CHANGELOG: 1-28-2012  ER
Light to turn on while booting up.
On sw warning display the out of position switches.

******************************************
CHANGELOG: 1-27-2012  ER
Fix for default sw position menu item.

******************************************
CHANGELOG: 23-1-2012  RFT
Some updates to audio queue to prevent sound overruns 
when playing 'long sounds'

******************************************
CHANGELOG: 22-1-2012  ER
Menu changes for protocols
Enable light on by moving sticks
More elaborate sw warning

******************************************
CHANGELOG: 19-1-2012  & 12-1-2012 MPB
Add PXX and PPM16 protocols
Add Altitude Alarm
Various code shrinking

******************************************
CHANGELOG: 13-1-2012  & 12-1-2012 RFT
Trainer jack audio conflic fix

******************************************
CHANGELOG: 12-1-2012 MPB
FrSky internal alarm, code shrinking

******************************************
CHANGELOG: 12-1-2012 MPB
FrSky internal alarm, turn off external alarm
FrSky telemetry, add FUEL guage to display

******************************************
CHANGELOG: 12-1-2012  & 10-1-2012 RFT
Update to sound mapping to play red alarms over orange
and orange over yellow

******************************************
CHANGELOG: 12-1-2012  & 12-1-2012 ER
Allow hiding of owner name on splash screen

******************************************
CHANGELOG: 09-1-2012  & 10-1-2012 RFT